Report: Finished analysis section. Also, did some bugfixing when trying to load data into the Rmd didnt work!

--- a/report/sections/00-abstract.Rmd
+++ b/report/sections/00-abstract.Rmd
@@ -1,4 +1,9 @@
-
+---
+title: "Predictive Statistical Modeling Process"
+author: "Bret Hart and Yuyu Zhang"
+date: "November 4, 2016"
+output: pdf_document
+---
 
 ####**Abstract**
 
